Updated version number to match patch.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eventide-rp-system",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "CSS compiler for the EventideRpSystem system",
   "scripts": {
     "build": "sass src/scss/eventide-rp-system.scss css/eventide-rp-system.css --style=expanded --no-source-map",
@@ -9,8 +9,8 @@
   "browserslist": [
     "last 3 versions"
   ],
-  "author": "Asacolips",
-  "license": "MIT",
+  "author": "Miles Eventide",
+  "license": "All rights reserved",
   "private": true,
   "devDependencies": {
     "sass": "^1.53.0"
