--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "All rights reserved",
   "private": true,
   "devDependencies": {
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "terser": "^5.37.0"
   }
 }
