--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "last 3 versions"
   ],
   "author": "Miles Eventide",
-  "license": "All rights reserved",
+  "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
     "sass": "^1.53.0",
