--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.15.0",
   "description": "Build tools and development scripts for the Eventide Roleplaying System",
   "scripts": {
-    "build": "sass src/scss/eventide-rp-system.scss css/eventide-rp-system.css --style=expanded --no-source-map",
+    "build": "npm run build:css && npm run build:lang",
+    "build:css": "sass src/scss/eventide-rp-system.scss css/eventide-rp-system.css --style=expanded --no-source-map",
+    "build:lang": "# Builds language files\nnode build-lang.js",
     "watch": "sass src/scss/eventide-rp-system.scss css/eventide-rp-system.css --style=expanded --source-map --watch",
     "release": "npm run release:linux || npm run release:win",
     "release:linux": "bash release_script.sh",
