--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npm run build:css && npm run build:lang",
     "build:css": "sass src/scss/eventide-rp-system.scss css/eventide-rp-system.css --style=expanded --no-source-map",
-    "build:lang": "# Builds language files\nnode build-lang.js",
+    "build:lang": "node -e \"console.log('Building language files...')\" && node build-lang.js",
     "watch": "sass src/scss/eventide-rp-system.scss css/eventide-rp-system.css --style=expanded --source-map --watch",
     "release": "npm run release:linux || npm run release:win",
     "release:linux": "bash release_script.sh",
