--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "eventide-rp-system",
   "version": "13.2.0",
+  "type": "module",
   "description": "Build tools and development scripts for the Eventide Roleplaying System",
   "scripts": {
     "build": "npm run build:css && npm run build:lang",
     "build:css": "sass src/scss/eventide-rp-system.scss css/eventide-rp-system.css --style=expanded --no-source-map",
     "build:lang": "node -e \"console.log('Building language files...')\" && node build-lang.js",
     "watch": "sass src/scss/eventide-rp-system.scss css/eventide-rp-system.css --style=expanded --source-map --watch",
+    "lint": "eslint module/**/*.mjs",
+    "lint:fix": "eslint module/**/*.mjs --fix",
+    "format": "prettier --write module/**/*.mjs",
+    "format:check": "prettier --check module/**/*.mjs",
+    "validate": "npm run lint && npm run format",
+    "dev": "npm run watch & npm run lint:watch",
+    "lint:watch": "nodemon --watch module --ext mjs --exec \"npm run lint:fix && npm run format\"",
+    "precommit": "npm run lint:fix && npm run format",
     "release": "npm run release:linux || npm run release:win",
     "release:linux": "bash release_script.sh",
     "release:win": "release_script.bat"
@@ -18,7 +27,10 @@
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
-    "sass": "^1.53.0",
+    "eslint": "^9.15.0",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.3.3",
+    "sass": "^1.80.0",
     "terser": "^5.37.0"
   }
 }
