Added sass linting to project.

--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "build:css": "sass src/scss/eventide-rp-system.scss css/eventide-rp-system.css --style=expanded --no-source-map",
     "build:lang": "node -e \"console.log('Building language files...')\" && node build-lang.js",
     "watch": "sass src/scss/eventide-rp-system.scss css/eventide-rp-system.css --style=expanded --source-map --watch",
-    "lint": "eslint module/**/*.mjs",
-    "lint:fix": "eslint module/**/*.mjs --fix",
+    "lint": "npm run lint:js && npm run lint:css",
+    "lint:js": "eslint module/**/*.mjs",
+    "lint:css": "stylelint src/**/*.scss",
+    "lint:fix": "eslint module/**/*.mjs --fix && stylelint src/**/*.scss --fix",
     "format": "prettier --write module/**/*.mjs",
     "format:check": "prettier --check module/**/*.mjs",
-    "validate": "npm run lint && npm run format",
+    "validate": "npm run lint:js && npm run lint:css && npm run format",
     "dev": "npm run watch & npm run lint:watch",
-    "lint:watch": "nodemon --watch module --ext mjs --exec \"npm run lint:fix && npm run format\"",
+    "lint:js:watch": "nodemon --watch module --ext mjs --exec \"npm run lint:fix && npm run format\"",
+    "lint:css:watch": "nodemon --watch src --ext scss --exec \"npm run lint:fix && npm run format\"",
     "precommit": "npm run lint:fix && npm run format",
     "release": "npm run release:linux || npm run release:win",
     "release:linux": "bash release_script.sh",
@@ -31,6 +34,8 @@
     "nodemon": "^3.1.10",
     "prettier": "^3.3.3",
     "sass": "^1.80.0",
+    "stylelint": "^16.19.1",
+    "stylelint-config-standard-scss": "^15.0.1",
     "terser": "^5.37.0"
   }
 }
