Updated linter rules to prevent components from getting flagged due to high specificity needs.

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,5 +3,13 @@
   "ignoreFiles": ["**/*.js", "**/*.css", "**/*.mjs"],
   "rules": {
     "selector-class-pattern": "^[a-z]([a-z0-9-]+)?(__([a-z0-9]+-?)+)?(--([a-z0-9]+-?)+){0,2}$"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["src/scss/components/*.scss"],
+      "rules": {
+        "no-descending-specificity": null
+      }
+    }
+  ]
 }
