Added linting override to prevent issue with component files thinking placeholders were having kebab issues when it was really just BEM.

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -8,7 +8,8 @@
     {
       "files": ["src/scss/components/*.scss", "src/scss/components/sheet/*.scss"],
       "rules": {
-        "no-descending-specificity": null
+        "no-descending-specificity": null,
+        "scss/percent-placeholder-pattern": null
       }
     }
   ]
