Dev Feature: concurrently to ensure that even computers struggling to keep up with tasks can run dev mode properly

--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "lint": "npm run lint:js && npm run lint:css",
     "lint:js": "eslint module/**/*.mjs",
     "lint:css": "stylelint src/**/*.scss",
-    "lint:fix": "eslint module/**/*.mjs --fix && stylelint src/**/*.scss --fix",
+    "lint:fix": "npm run lint:js:fix && npm run lint:css:fix",
+    "lint:js:fix": "eslint module/**/*.mjs --fix",
+    "lint:css:fix": "stylelint src/**/*.scss --fix",
     "format": "prettier --write module/**/*.mjs",
     "format:check": "prettier --check module/**/*.mjs",
-    "validate": "npm run lint:js && npm run lint:css && npm run format",
-    "dev": "npm run watch & npm run lint:watch",
-    "lint:js:watch": "nodemon --watch module --ext mjs --exec \"npm run lint:fix && npm run format\"",
-    "lint:css:watch": "nodemon --watch src --ext scss --exec \"npm run lint:fix && npm run format\"",
+    "lint-and-format-js": "npm run lint:js:fix && npm run format",
+    "validate": "npm run lint && npm run format:check",
+    "dev": "concurrently \"npm:watch\" \"npm:lint:js:watch\" \"npm:lint:css:watch\"",
+    "lint:js:watch": "nodemon --watch module --ext mjs --exec \"npm run lint-and-format-js\"",
+    "lint:css:watch": "nodemon --watch src --ext scss --exec \"npm run lint:css:fix\"",
     "precommit": "npm run lint:fix && npm run format",
     "release": "npm run release:linux || npm run release:win",
     "release:linux": "bash release_script.sh",
@@ -30,6 +33,7 @@
   "license": "LGPL-2.1-or-later",
   "private": true,
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "eslint": "^9.15.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.3.3",
