--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "precommit": "npm run lint:fix && npm run format",
     "release": "npm run release:linux || npm run release:win",
     "release:linux": "bash release_script.sh",
-    "release:win": "release_script.bat"
+    "release:win": "release_script.bat",
+    "prepare": "husky"
   },
   "browserslist": [
     "last 3 versions"
@@ -35,6 +36,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "eslint": "^9.15.0",
+    "husky": "^9.1.7",
     "nodemon": "^3.1.10",
     "prettier": "^3.3.3",
     "sass": "^1.80.0",
