Updated linting to check more files more accurately.

--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "build:lang": "node -e \"console.log('Building language files...')\" && node build-lang.js",
     "watch": "sass src/scss/eventide-rp-system.scss css/eventide-rp-system.css --style=expanded --source-map --watch",
     "lint": "npm run lint:js && npm run lint:css",
-    "lint:js": "eslint module/**/*.mjs",
+    "lint:js": "eslint .",
     "lint:css": "stylelint src/**/*.scss",
     "lint:fix": "npm run lint:js:fix && npm run lint:css:fix",
-    "lint:js:fix": "eslint module/**/*.mjs --fix",
+    "lint:js:fix": "eslint . --fix",
     "lint:css:fix": "stylelint src/**/*.scss --fix",
-    "format": "prettier --write module/**/*.mjs",
-    "format:check": "prettier --check module/**/*.mjs",
+    "format": "prettier --write module/**/*.mjs build-lang.js minify.js",
+    "format:check": "prettier --check module/**/*.mjs build-lang.js minify.js",
     "lint-and-format-js": "npm run lint:js:fix && npm run format",
     "validate": "npm run lint && npm run format:check",
     "dev": "concurrently \"npm:watch\" \"npm:lint:js:watch\" \"npm:lint:css:watch\"",
