Added markdown linting for the docs folder.

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build:css": "sass src/scss/eventide-rp-system.scss css/eventide-rp-system.css --style=expanded --no-source-map",
     "build:lang": "node -e \"console.log('Building language files...')\" && node build-lang.js",
     "watch": "sass src/scss/eventide-rp-system.scss css/eventide-rp-system.css --style=expanded --source-map --watch",
-    "lint": "npm run lint:js && npm run lint:css",
+    "lint": "npm run lint:js && npm run lint:css && npm run lint:md",
     "lint:js": "eslint .",
     "lint:css": "stylelint src/**/*.scss",
-    "lint:fix": "npm run lint:js:fix && npm run lint:css:fix",
+    "lint:md": "markdownlint-cli2 \"docs/**/*.md\"",
+    "lint:fix": "npm run lint:js:fix && npm run lint:css:fix && npm run lint:md:fix",
     "lint:js:fix": "eslint . --fix",
     "lint:css:fix": "stylelint src/**/*.scss --fix",
+    "lint:md:fix": "markdownlint-cli2 --fix \"docs/**/*.md\"",
     "format": "prettier --write module/**/*.mjs build-lang.js minify.js",
     "format:check": "prettier --check module/**/*.mjs build-lang.js minify.js",
     "lint-and-format-js": "npm run lint:js:fix && npm run format",
@@ -45,6 +47,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "markdownlint-cli2": "^0.20.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.3.3",
     "sass": "^1.80.0",
